feat: R6 知识库修复(UTF-8编码强制+上传链路修复+种子可复现+向量化全链路+密钥基础设施)